added ctrl tag to partial

--- a/partials/tictactoe.html
+++ b/partials/tictactoe.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper" ng-controller="gameCtrl">
 	<div class="action-bar">
 		<input type="checkbox" value="{{computer_starts}}" ng-model="computer_starts" ng-checked="computer_starts" />Computer Starts?
 		<button id="start-game" class="btn btn-primary" ng-click="startGame()">New Game</button>
